<resources>
    <string name="app_name">Teching</string>
    <string name="user_image_username">Please Create a Username</string>
    <string name="hint_email">Please Insert your email</string>
    <string name="user_personalName">Enter Name</string>
    <string name="inputUsername">Please Type in a username</string>
    <string name="hint_password">Please enter a password</string>
    <string name="hint_passwordConfirm">Please confirm your password</string>
    <string name="enterUsername">Username</string>
    <string name="enterPassword">Password</string>
    <string name="user_dateOfBirth">Please enter your date of birth</string>
    <string name="user_gender_profile_info_hint">Please enter your gender</string>
    <string name="user_location_profile_info_hint">Please enter your location</string>
    <string name="bioFiller">Enter a bio</string>
    <string name="find_partner">Find Partner</string>
    <string name="messages">Messages</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="bio_profile">Profile</string>
    <string name="hint_username">Please enter a username</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next_btn_text">Next</string>
    <string name="display_name">Display Name</string>
    <string name="write_message_here">Write message here...</string>
    <string name="add_contents_description">Add contents</string>
    <string name="receiver_message">hey</string>
    <string name="find_a_partner_btn_text">Find A Partner</string>
    <string name="messages_btn_text">Messages</string>
    <string name="fab_message_view_description">Open the message view</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="add_email_text">Email Address</string>
    <string name="teching_app_logo">Teching app logo</string>
    <string name="name_user_profile_info_text">Name</string>
    <string name="profile_information_text">Profile Information</string>
    <string name="date_of_birth_profile_info_text">Date Of Birth</string>
    <string name="gender_profile_info_text">Gender</string>
    <string name="location_profile_info_text">Location</string>
    <string name="show_me_profile_info_text">Show me</string>
    <string name="distance_range_profile_info_text">Distance Range</string>
    <string name="age_range_pref_profile_info">Age Range Preference</string>
    <string name="men_switch_text">Men</string>
    <string name="women_switch_text">Women</string>
    <string name="user_profile_bio">Bio here</string>
    <string name="user_profile_messages">Messages</string>
    <string name="female_gender_profile_info">Female</string>
    <string name="male_gender_profile_info">Male</string>
    <string name="type_bio">Your bio</string>
    <string name="write_a_bio_text">Write a bio</string>
    <string name="age_maximum_hint">35</string>
    <string name="age_minimum_hint">18</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="log_in_btn_text">Log In</string>
    <string name="enter_email_hint">Email</string>
    <string name="info_title">App Info</string>
    <string name="info_Dialog">Welcome to Teching, the first Dating App designed for Techies! </string>
    <string name="action_settings">Settings</string>

    <string-array name="name">
        <item>Elon Musk</item>
        <item>Mark Juckerberg</item>
        <item>Steve Jobs</item>
        <item>Bill Gates</item>
        <item>Jeff Bezos</item>
        <item>Ren Zhengfei</item>
        <item>Rapunzel</item>
        <item>Elsa</item>
        <item>Olaf</item>

    </string-array>

    <array name="userImages">
        <item>@drawable/elon</item>
        <item>@drawable/juck</item>
        <item>@drawable/steve</item>
        <item>@drawable/bill</item>
        <item>@drawable/jeffbezos</item>
        <item>@drawable/renzhengfei</item>
        <item>@drawable/rapunzel</item>
        <item>@drawable/elsa</item>
        <item>@drawable/olaf</item>
    </array>

    <string-array name="bio">
        <item>Hi\nI am available</item>
        <item>Hello there </item>
        <item>This is Steve</item>
        <item>Owner of microsoft</item>
        <item>Hey \nI am Using TECHING</item>
        <item>hi\n </item>
        <item>This is my bio</item>
        <item>Nothing to say </item>
        <item>Send me message..</item>

    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="logout">Logout</string>


</resources>