<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/fab_message_view_description"
        android:src="@drawable/ic_message" />

    <ImageView
        android:id="@+id/bio_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture_description" />

    <TextView
        android:id="@+id/bio_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:hint="@string/user_personalName" />

    <TextView
        android:id="@+id/bio_Textbox"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:drawablePadding="8dp"
        android:elevation="6dp"
        android:ems="15"
        android:hint="@string/bioFiller"
        android:inputType="textPersonName"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textAlignment="center"
        android:textSize="15sp"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/nextBtn_findPartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#9C5ADF"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/find_a_partner_btn_text"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/nextBtn_messageBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#9C5ADF"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/messages_btn_text"
        android:textColor="@color/black" />

</LinearLayout>