<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/profile_information_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/show_me_profile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/men_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:ems="15"
                android:padding="6dp"
                android:text="@string/men_switch_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/women_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_input"
                android:ems="15"
                android:padding="6dp"
                android:text="@string/women_switch_text" />

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:text="@string/distance_range_profile_info_text"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="20sp" />-->

            <!--            <SeekBar-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="15dp"-->
            <!--                android:ems="15"-->
            <!--                android:max="100"-->
            <!--                android:min="0"-->
            <!--                android:progress="25"-->
            <!--                tools:targetApi="o" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/age_range_pref_profile_info"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/from_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/age_minInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/custom_input"
                    android:elevation="6dp"
                    android:hint="@string/age_minimum_hint"
                    android:inputType="number"
                    android:padding="6dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/to_text"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/age_maxInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/custom_input"
                    android:elevation="6dp"
                    android:hint="@string/age_maximum_hint"
                    android:inputType="number"
                    android:padding="6dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/write_a_bio_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/bio_input"
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="8dp"
                android:elevation="6dp"
                android:ems="15"
                android:hint="@string/type_bio"
                android:inputType="textLongMessage"
                android:padding="6dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/secondInfoPage_toBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:backgroundTint="#9C5ADF"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/next_btn_text"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
