<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:importantForAutofill="noExcludeDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/profile_information_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/name_user_profile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nameText_Insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:elevation="6dp"
                android:ems="15"
                android:hint="@string/user_personalName"
                android:inputType="textPersonName"
                android:padding="6dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/date_of_birth_profile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/date_of_birth_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <!--            <EditText-->
            <!--                android:id="@+id/dateOfBirth_Insert"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:background="@drawable/custom_input"-->
            <!--                android:drawableStart="@drawable/ic_calendar"-->
            <!--                android:drawablePadding="8dp"-->
            <!--                android:elevation="6dp"-->
            <!--                android:ems="15"-->
            <!--                android:hint="@string/user_dateOfBirth"-->
            <!--                android:inputType="date"-->
            <!--                android:padding="6dp"-->
            <!--                android:textSize="15sp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/gender_profile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/gender_spinner_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:elevation="6dp"

                android:ems="15"
                android:padding="6dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/location_profile_info_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/location_Insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="8dp"
                android:elevation="6dp"
                android:ems="15"
                android:hint="@string/user_location_profile_info_hint"
                android:inputType="date"
                android:padding="6dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/nextbtn_secondPageInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:backgroundTint="#9C5ADF"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/next_btn_text"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
