<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/teching_logo"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/createUserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="Create Username"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp" />

    <EditText
        android:id="@+id/inputUserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="18"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:elevation="6dp"
        android:paddingStart="6dp"
        android:hint="@string/hint_email"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/createPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="Create Password"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/inputPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="18"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:elevation="6dp"
        android:paddingStart="6dp"
        android:hint="@string/hint_password"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="Confirm Password"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/inputPasswordConfirmationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="18"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:elevation="6dp"
        android:paddingStart="6dp"
        android:hint="@string/hint_passwordConfirm"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/nextBtn_termsAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:backgroundTint="#9C5ADF"
        android:textColor="@color/black"
        android:text="Next"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="80dp" />

</LinearLayout>